added release 1.42.2